--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Andrew Ross Sorkin, author of <i>Too Big to Fail</i></title>
+	<title>Andrew Ross Sorkin, author of "Too Big to Fail"</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
 	
 </head>
@@ -13,7 +13,7 @@
 		
 		<h1>Andrew Ross Sorkin, author of <i>Too Big to Fail</i></h1>
 		<h3>November 16, 2010</h3>
-		<img src="images/sorkin_desk260.jpg" alt="Sorkin at Desk" width="260" height="100">
+		<img src="images/sorkin_desk260.jpg" alt="Sorkin at Desk" width="260" height="">
 		
 	</header>
 	<main>
