--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<p>New York Times columnist and author, Andrew Ross Sorkin, has been described as &quot;the most famous financial journalist of his generation.&quot; His book, <i>Too Big to Fail</i>, was the first behind-the-scenes account of the financial crisis that led to our current recession.</p>
 		<p>The Economist, The Financial Times, and Business Week all named <i>Too Big To Fail</i> one of the best books of the year. The book was published by Viking October 20, 2009. The book was adapted as a movie by HBO Films and premiered on HBO on May 23, 2011.</p>
 		
-		<h2>The cast of the movie: <i>Too Big to Fail</i></h2>
+		<h2>The cast of the movie: <em>Too Big to Fail</em></h2>
 		<ol>
 			<li>William Hurt as Hank Paulson</li>
 			<li>Paul Giamatti as Ben Bernanke</li>
@@ -34,7 +34,7 @@
 	</main>
 	<footer>
 		<p>Prepared by: Tejveer Singh</p>
-		<p>Date: 5/22/20</p>
+		<p>Date: 6/15/20</p>
 	</footer>
 </body>
 </html>
